--- a/src/app/scss/custome.scss
+++ b/src/app/scss/custome.scss
@@ -30,71 +30,194 @@ div {
 }
 
 /* General */
-ul, li{
+ul,
+li {
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
-.menu_bar{
+
+.menu_bar {
     margin: 0;
     padding: 0;
     width: 100%;
     display: flex;
-    flex-wrap: wrap;  
-    li{
+    flex-wrap: wrap;
+
+    li {
         margin: 10px;
-        a{
+
+        a {
             color: #000;
             font-size: 0.9rem;
             font-weight: 500;
 
-            &:hover{
+            &:hover {
                 color: #5a5959;
                 text-decoration: underline;
             }
         }
     }
 }
-.backtohome{
+
+.backtohome {
     position: absolute;
-    top : 10px;
+    top: 10px;
     left: 10px;
     font-size: 0.9rem;
     color: #000;
     font-weight: 500;
-    &:hover{
+
+    &:hover {
         color: #5a5959;
     }
 }
-.timefull-wrap{
+
+.timefull-wrap {
     width: 100%;
     height: 100vh;
     background-color: aquamarine;
     display: flex;
     align-items: center;
     justify-content: center;
-    h1{
+
+    h1 {
         font-size: 2rem;
         background-color: #fff;
         padding: 10px 20px;
         border-radius: 10px;
-        box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     }
 }
 
-.mathCss{
+.mathCss {
     font-size: 1rem;
     background-color: #fff;
     padding: 10px 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
-    li{
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+
+    li {
         font-weight: 500;
-    }    
+    }
 }
-.cardHeading{
+
+.cardHeading {
     text-align: center;
     font-size: 1.5rem;
     padding: 20px 0;
+}
+
+// slider css
+.listSliderWrap{
+    display: flex;
+    padding: 0 35px;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: linear-gradient(to left top, #031A9A, #8B53FF);
+}
+.wrapper {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
+    i{
+        top: 50%;
+        height: 50px;
+        width: 50px;
+        cursor: pointer;
+        font-size: 1.25rem;
+        position: absolute;
+        text-align: center;
+        line-height: 50px;
+        background: #fff;
+        border-radius: 50%;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+        transform: translateY(-50%);
+        transition: transform 0.1s linear;
+        z-index: 1;
+
+        &:active{
+            transform: translateY(-50%) scale(0.85);
+        }
+    }
+    i:first-child{
+        left: -22px;
+    }
+    i:last-child{
+        right: -22px;
+    }
+
+    .carousel{
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: calc((100% / 3));
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        gap: 16px;
+        border-radius: 8px;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar{
+            display: none;
+        }
+        &.no-transition{
+            scroll-behavior: auto;
+        }
+        &.dragging {
+            scroll-snap-type: none;
+            scroll-behavior: auto;
+
+            .card {
+                cursor: grab;
+                user-select: none;
+            }
+        }
+
+        :where(.card, .img) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .card {
+            scroll-snap-align: start;
+            height: 342px;
+            list-style: none;
+            background: #fff;
+            cursor: pointer;
+            padding-bottom: 15px;
+            flex-direction: column;
+            border-radius: 8px;
+
+            .img{
+                background: #8B53FF;
+                height: 148px;
+                width: 148px;
+                border-radius: 50%;
+
+                img{
+                    width: 140px;
+                    height: 140px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    border: 4px solid #fff;
+                }
+            }
+
+            h2{
+                font-weight: 500;
+                font-size: 1.56rem;
+                margin: 30px 0 5px;
+            }
+
+            span{
+                color: #6A6D78;
+                font-size: 1.31rem;
+            }
+        }        
+    }
 }
