--- a/src/app/scss/custome.scss
+++ b/src/app/scss/custome.scss
@@ -89,6 +89,7 @@ a {
         padding: 10px 20px;
         border-radius: 10px;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+        color: #8B53FF;
     }
 }
 
@@ -128,7 +129,7 @@ a {
         height: 50px;
         width: 50px;
         cursor: pointer;
-        font-size: 1.25rem;
+        font-size: 2rem;
         position: absolute;
         text-align: center;
         line-height: 50px;
