--- a/src/app/scss/custome.scss
+++ b/src/app/scss/custome.scss
@@ -222,3 +222,30 @@ a {
         }        
     }
 }
+.customeTable{
+    i{
+        margin: 0 5px;
+        font-size: 1.2rem;
+    }
+}
+.modal-content{
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+}
+.status{
+    font-size: 0.8rem;
+    display: inline-block;
+    padding: 4px 10px;
+    color: #fff;
+    line-height: normal;
+    border-radius: 5px;
+    font-weight: 400;
+}
+.live{
+    background-color: green;
+}
+.draft{
+    background-color: orange;
+}
+.error{
+    background-color: red;
+}
