--- a/src/app/scss/custome.scss
+++ b/src/app/scss/custome.scss
@@ -256,3 +256,11 @@ a {
     font-size: 0.8rem;
     font-weight: 500;
 }
+
+.tabSectionclass{
+    .tab-content{
+        padding: 20px;
+        border: solid 1px #dee2e6;
+        border-top: none;
+    }
+}
