--- a/src/app/scss/custome.scss
+++ b/src/app/scss/custome.scss
@@ -82,6 +82,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 20px;
 
     h1 {
         font-size: 2rem;
