--- a/src/app/scss/_custome.scss
+++ b/src/app/scss/_custome.scss
@@ -259,6 +259,14 @@ a {
     font-weight: 500;
 }
 
+.mode-light{
+    
+}
+.mode-dark{
+    background-color: #000;
+    color: #fff;
+}
+
 .bootAlert{
     transform: translate(-50%, 10px);
     min-width: 500px;
